LWA-225 fixed print button alignment

--- a/app/css/responsive.css
+++ b/app/css/responsive.css
@@ -960,6 +960,10 @@ body[dir="RTL"] .modal-content .languages-container .language-item-container .la
     background: url(./../images/menu-print-icon.svg) no-repeat;
 }
 
+.info-modal .modal-header .modal-icon.menu-print-icon {
+    background: url(./../images/menu-print-icon.svg) no-repeat;
+}
+
 #print-modal .modal-icon {
     background: url(./../images/simple-print-icon.svg) no-repeat;
     background-position: center;
